[bug] time zone countdown

--- a/web/index.html
+++ b/web/index.html
@@ -160,7 +160,7 @@
           <option value="ALL">All Subjects</option>
       </select>
       <select id="sort">
-        <option value="deadline-asc">Submission DDL (earliest)</option>
+        <option value="deadline-asc">Submission DDL (earliest)</option> <!-- TODO: incorrect time -->
         <option value="deadline-desc">Submission DDL (latest)</option>
         <option value="name-asc">Name A->Z</option>
         <option value="name-desc">Name Z->A</option>
